@@ -1853,6 +1853,20 @@ block|}
 annotation|@
 name|Override
 specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
 name|Comparator
 argument_list|<
 name|BytesRef
