@@ -56,6 +56,96 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
+comment|/** Returns the number of terms for all fields, or -1 if this     *  measure isn't stored by the codec. Note that, just like     *  other term measures, this measure does not take deleted     *  documents into account. */
+comment|// TODO: deprecate?
+DECL|method|getUniqueTermCount
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|long
+name|numTerms
+init|=
+literal|0
+decl_stmt|;
+name|FieldsEnum
+name|it
+init|=
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|String
+name|field
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|field
+operator|==
+literal|null
+condition|)
+block|{
+break|break;
+block|}
+name|Terms
+name|terms
+init|=
+name|terms
+argument_list|(
+name|field
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|terms
+operator|!=
+literal|null
+condition|)
+block|{
+specifier|final
+name|long
+name|termCount
+init|=
+name|terms
+operator|.
+name|getUniqueTermCount
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|termCount
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+name|numTerms
+operator|+=
+name|termCount
+expr_stmt|;
+block|}
+block|}
+return|return
+name|numTerms
+return|;
+block|}
 DECL|field|EMPTY_ARRAY
 specifier|public
 specifier|final
