@@ -3640,7 +3640,7 @@ return|return
 name|this
 return|;
 block|}
-comment|/** Returns the number of unique terms (across all fields)    *  in this reader.    *    *  @throws UnsupportedOperationException if this count    *  cannot be easily determined (eg Multi*Readers).    *  Instead, you should call {@link    *  #getSequentialSubReaders} and ask each sub reader for    *  its unique term count. */
+comment|/** Returns the number of unique terms (across all fields)    *  in this reader.    *    *  @return number of unique terms or -1 if this count    *  cannot be easily determined (eg Multi*Readers).    *  Instead, you should call {@link    *  #getSequentialSubReaders} and ask each sub reader for    *  its unique term count. */
 DECL|method|getUniqueTermCount
 specifier|public
 name|long
@@ -3649,11 +3649,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|long
-name|numTerms
-init|=
-literal|0
-decl_stmt|;
 specifier|final
 name|Fields
 name|fields
@@ -3672,51 +3667,11 @@ return|return
 literal|0
 return|;
 block|}
-name|FieldsEnum
-name|it
-init|=
+return|return
 name|fields
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-literal|true
-condition|)
-block|{
-name|String
-name|field
-init|=
-name|it
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|field
-operator|==
-literal|null
-condition|)
-block|{
-break|break;
-block|}
-name|numTerms
-operator|+=
-name|fields
-operator|.
-name|terms
-argument_list|(
-name|field
-argument_list|)
 operator|.
 name|getUniqueTermCount
 argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|numTerms
 return|;
 block|}
 comment|/** For IndexReader implementations that use    *  TermInfosReader to read terms, this returns the    *  current indexDivisor as specified when the reader was    *  opened.    */
