@@ -505,6 +505,21 @@ block|}
 block|}
 annotation|@
 name|Override
+DECL|method|getUniqueTermCount
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|getSumTotalTermFreq
 specifier|public
 name|long
