@@ -2536,6 +2536,13 @@ argument_list|(
 name|r
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|perDocs
+operator|!=
+literal|null
+condition|)
+block|{
 name|fields
 operator|.
 name|put
@@ -2550,6 +2557,7 @@ name|field
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
