@@ -106,6 +106,23 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|codecs
+operator|.
+name|preflex
+operator|.
+name|PreFlexCodec
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|Directory
@@ -165,12 +182,6 @@ specifier|private
 specifier|final
 name|Codec
 name|codec
-init|=
-operator|new
-name|PerFieldCodecWrapper
-argument_list|(
-name|this
-argument_list|)
 decl_stmt|;
 DECL|method|SegmentCodecs
 name|SegmentCodecs
@@ -220,6 +231,46 @@ name|codecs
 operator|=
 name|codecs
 expr_stmt|;
+if|if
+condition|(
+name|codecs
+operator|.
+name|length
+operator|==
+literal|1
+operator|&&
+name|codecs
+index|[
+literal|0
+index|]
+operator|instanceof
+name|PreFlexCodec
+condition|)
+block|{
+name|this
+operator|.
+name|codec
+operator|=
+name|codecs
+index|[
+literal|0
+index|]
+expr_stmt|;
+comment|// hack for backwards break... don't wrap the codec in preflex
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|codec
+operator|=
+operator|new
+name|PerFieldCodecWrapper
+argument_list|(
+name|this
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|codec
 name|Codec
