@@ -3235,6 +3235,17 @@ name|segmentWriteState
 argument_list|)
 argument_list|)
 decl_stmt|;
+comment|// TODO: remove this check when 3.x indexes are no longer supported
+comment|// (3.x indexes don't have docvalues)
+if|if
+condition|(
+name|docsConsumer
+operator|==
+literal|null
+condition|)
+block|{
+return|return;
+block|}
 name|boolean
 name|success
 init|=
