@@ -540,22 +540,16 @@ name|reuse
 argument_list|)
 return|;
 block|}
+comment|/** Returns the number of terms for this field, or -1 if this     *  measure isn't stored by the codec. Note that, just like     *  other term measures, this measure does not take deleted     *  documents into account. */
 DECL|method|getUniqueTermCount
 specifier|public
+specifier|abstract
 name|long
 name|getUniqueTermCount
 parameter_list|()
 throws|throws
 name|IOException
-block|{
-throw|throw
-operator|new
-name|UnsupportedOperationException
-argument_list|(
-literal|"this reader does not implement getUniqueTermCount()"
-argument_list|)
-throw|;
-block|}
+function_decl|;
 comment|/** Returns the sum of {@link TermsEnum#totalTermFreq} for    *  all terms in this field, or -1 if this measure isn't    *  stored by the codec (or if this fields omits term freq    *  and positions).  Note that, just like other term    *  measures, this measure does not take deleted documents    *  into account. */
 DECL|method|getSumTotalTermFreq
 specifier|public
