@@ -3979,6 +3979,12 @@ specifier|final
 name|int
 name|docCount
 decl_stmt|;
+DECL|field|termCount
+specifier|private
+specifier|final
+name|int
+name|termCount
+decl_stmt|;
 DECL|field|fst
 specifier|private
 name|FST
@@ -4013,10 +4019,19 @@ name|fieldInfos
 parameter_list|,
 name|IndexInput
 name|in
+parameter_list|,
+name|int
+name|termCount
 parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|this
+operator|.
+name|termCount
+operator|=
+name|termCount
+expr_stmt|;
 specifier|final
 name|int
 name|fieldNumber
@@ -4128,6 +4143,20 @@ name|IOException
 block|{
 return|return
 name|docCount
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getUniqueTermCount
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|termCount
 return|;
 block|}
 annotation|@
@@ -4273,6 +4302,8 @@ operator|.
 name|fieldInfos
 argument_list|,
 name|in
+argument_list|,
+name|termCount
 argument_list|)
 decl_stmt|;
 name|fields
