@@ -902,6 +902,24 @@ name|field
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|getUniqueTermCount
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|getTermsDict
+argument_list|()
+operator|.
+name|size
+argument_list|()
+return|;
+block|}
 DECL|method|getTermsDict
 specifier|synchronized
 specifier|private
@@ -1199,6 +1217,21 @@ name|getUTF8SortedAsUTF16Comparator
 argument_list|()
 return|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|getUniqueTermCount
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+operator|-
+literal|1
+return|;
 block|}
 annotation|@
 name|Override
