@@ -7867,16 +7867,6 @@ argument_list|(
 name|random
 argument_list|)
 argument_list|)
-operator|.
-name|setCodecProvider
-argument_list|(
-name|_TestUtil
-operator|.
-name|alwaysCodec
-argument_list|(
-literal|"Standard"
-argument_list|)
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|Document
@@ -7999,27 +7989,17 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-try|try
-block|{
+name|assertEquals
+argument_list|(
+operator|-
+literal|1
+argument_list|,
 name|r2
 operator|.
 name|getUniqueTermCount
 argument_list|()
-expr_stmt|;
-name|fail
-argument_list|(
-literal|"expected exception"
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|UnsupportedOperationException
-name|uoe
-parameter_list|)
-block|{
-comment|// expected
-block|}
 name|IndexReader
 index|[]
 name|subs
