@@ -474,6 +474,20 @@ operator|-
 literal|1
 return|;
 block|}
+annotation|@
+name|Override
+specifier|public
+name|long
+name|getUniqueTermCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
 block|}
 argument_list|)
 decl_stmt|;
